--- a/.travis.yml
+++ b/.travis.yml
@@ -51,77 +51,77 @@ jobs:
   fast_finish: true
 
   include:
-    # Testing remote-data when running builds on master or with
-    # cron. Starting these early as they take much longer to run. Using
-    # both short and long versions for remote-data to help test the
-    # astropy test command.
-    - os: linux
-      name: Remote data test with astropy dev, Python 3.7
-      stage: Remote data tests
-      env: EVENT_TYPE='push cron' DEBUG=True ASTROPY_VERSION=dev
-        SETUP_CMD='test -R -V -a "--durations=50"'
-        CONDA_DEPENDENCIES=$CONDA_DEPENDENCIES_REMOTE
+    # # Testing remote-data when running builds on master or with
+    # # cron. Starting these early as they take much longer to run. Using
+    # # both short and long versions for remote-data to help test the
+    # # astropy test command.
+    # - os: linux
+    #   name: Remote data test with astropy dev, Python 3.7
+    #   stage: Remote data tests
+    #   env: EVENT_TYPE='push cron' DEBUG=True ASTROPY_VERSION=dev
+    #     SETUP_CMD='test -R -V -a "--durations=50"'
+    #     CONDA_DEPENDENCIES=$CONDA_DEPENDENCIES_REMOTE
 
-    - stage: Initial tests
-      name: egg info
-      env: PYTHON_VERSION=3.7 SETUP_CMD='egg_info'
+    # - stage: Initial tests
+    #   name: egg info
+    #   env: PYTHON_VERSION=3.7 SETUP_CMD='egg_info'
 
-    - os: osx
-      name: OSX from cron
-      stage: Cron tests
-      env: EVENT_TYPE='cron'
+    # - os: osx
+    #   name: OSX from cron
+    #   stage: Cron tests
+    #   env: EVENT_TYPE='cron'
 
-    - os: linux
-      stage: Initial tests
-      name: Python 3.7 and all dependencies
-      env: SETUP_CMD='test --coverage'
+    # - os: linux
+    #   stage: Initial tests
+    #   name: Python 3.7 and all dependencies
+    #   env: SETUP_CMD='test --coverage'
 
-    # Check for sphinx doc build warnings - we do this first because it
-    # may run for a long time
-    - os: linux
-      name: Docs build
-      stage: Test docs, astropy dev, and without optional dependencies
-      env: SETUP_CMD='build_docs -w'
+    # # Check for sphinx doc build warnings - we do this first because it
+    # # may run for a long time
+    # - os: linux
+    #   name: Docs build
+    #   stage: Test docs, astropy dev, and without optional dependencies
+    #   env: SETUP_CMD='build_docs -w'
 
-    # Try all python versions and Numpy versions. Since we can assume
-    # that the Numpy developers have taken care of testing Numpy with
-    # different versions of Python, we can vary Python and Numpy
-    # versions at the same time. We don't expect any of these to fail in
-    # master for cron jobs.  secretstorage is a keyring dependency, we
-    # need to pin the version number to make this job work.
-    # Test the oldest astropy version without optional dependencies.
-    # Reproject is listed as dependency to avoid upgrading astropy
-    - os: linux
-      name: Oldest dependencies
-      stage: Tests with other Python/Numpy versions
-      env: PYTHON_VERSION=3.6 NUMPY_VERSION=1.14 KEYRING_VERSION='<12.0'
-        ASTROPY_VERSION=3.0 DEBUG=True
-        PIP_DEPENDENCIES="`echo $PIP_DEPENDENCIES reproject==0.5 | sed 's/aplpy/aplpy<2.0/'`"
-    - os: linux
-      name: Python 3.6, np 1.15, astropy 3.2
-      stage: Tests with other Python/Numpy versions
-      env: PYTHON_VERSION=3.6 NUMPY_VERSION=1.15 ASTROPY_VERSION=3.2
+    # # Try all python versions and Numpy versions. Since we can assume
+    # # that the Numpy developers have taken care of testing Numpy with
+    # # different versions of Python, we can vary Python and Numpy
+    # # versions at the same time. We don't expect any of these to fail in
+    # # master for cron jobs.  secretstorage is a keyring dependency, we
+    # # need to pin the version number to make this job work.
+    # # Test the oldest astropy version without optional dependencies.
+    # # Reproject is listed as dependency to avoid upgrading astropy
+    # - os: linux
+    #   name: Oldest dependencies
+    #   stage: Tests with other Python/Numpy versions
+    #   env: PYTHON_VERSION=3.6 NUMPY_VERSION=1.14 KEYRING_VERSION='<12.0'
+    #     ASTROPY_VERSION=3.0 DEBUG=True
+    #     PIP_DEPENDENCIES="`echo $PIP_DEPENDENCIES reproject==0.5 | sed 's/aplpy/aplpy<2.0/'`"
+    # - os: linux
+    #   name: Python 3.6, np 1.15, astropy 3.2
+    #   stage: Tests with other Python/Numpy versions
+    #   env: PYTHON_VERSION=3.6 NUMPY_VERSION=1.15 ASTROPY_VERSION=3.2
 
-    - os: linux
-      name: Python 3.7, astropy dev
-      stage: Test docs, astropy dev, and without optional dependencies
-      env: ASTROPY_VERSION=development EVENT_TYPE='pull_request'
+    # - os: linux
+    #   name: Python 3.7, astropy dev
+    #   stage: Test docs, astropy dev, and without optional dependencies
+    #   env: ASTROPY_VERSION=development EVENT_TYPE='pull_request'
 
-    # Try with optional dependencies disabled
-    - os: linux
-      name: Python 3.8, mandatory dependencies only
-      stage: Test docs, astropy dev, and without optional dependencies
-      env: PYTHON_VERSION=3.8
-        CONDA_DEPENDENCIES='requests beautifulsoup4 html5lib keyring'
-        PIP_DEPENDENCIES='https://github.com/keflavich/httpbin/archive/master.zip pytest-astropy'
-        NUMPY_VERSION=1.16
+    # # Try with optional dependencies disabled
+    # - os: linux
+    #   name: Python 3.8, mandatory dependencies only
+    #   stage: Test docs, astropy dev, and without optional dependencies
+    #   env: PYTHON_VERSION=3.8
+    #     CONDA_DEPENDENCIES='requests beautifulsoup4 html5lib keyring'
+    #     PIP_DEPENDENCIES='https://github.com/keflavich/httpbin/archive/master.zip pytest-astropy'
+    #     NUMPY_VERSION=1.16
 
-    # Do a PEP8 test with pycodestyle
-    - os: linux
-      name: Code style
-      stage: Initial tests
-      env: MAIN_CMD='pycodestyle astroquery --count'
-        SETUP_CMD='' EVENT_TYPE='push pull_request'
+    # # Do a PEP8 test with pycodestyle
+    # - os: linux
+    #   name: Code style
+    #   stage: Initial tests
+    #   env: MAIN_CMD='pycodestyle astroquery --count'
+    #     SETUP_CMD='' EVENT_TYPE='push pull_request'
 
     # Do the windows test at the end as installing takes a long time
     - os: windows
@@ -129,18 +129,18 @@ jobs:
       stage: Windows test
       env: PYTHON_VERSION=3.7 SETUP_CMD='test -v -s'
 
-    - stage: Deploy
-      git:
-        depth: False
-      env: SETUP_CMD='sdist' EVENT_TYPE='push'
-      deploy:
-        provider: pypi
-        username: astroquery
-        password:
-          secure: DtqyQkllGcWuKOVMsu9RWRiobeL8bdpMxwdSYpob4Cqj0D2hLLx3w50qr0qpDCFzioB3rXnhbtPKEzHB+4fTFT/Rjito32fFPUtee2Rw4SCe4YIlS0ksPOTmxkeoh2TQLIYcNPPoI7UpUX6uC65nzgCUTmZVoiCweQE+i5GhEBI=
-        on:
-          branch: master
-      before_install: if [[ ! -z $(echo $TRAVIS_COMMIT_MESSAGE | grep -E "\[nodeploy\]") ]]; then echo "Skipping deployment as indicated by commit message"; travis_terminate 0; fi
+    # - stage: Deploy
+    #   git:
+    #     depth: False
+    #   env: SETUP_CMD='sdist' EVENT_TYPE='push'
+    #   deploy:
+    #     provider: pypi
+    #     username: astroquery
+    #     password:
+    #       secure: DtqyQkllGcWuKOVMsu9RWRiobeL8bdpMxwdSYpob4Cqj0D2hLLx3w50qr0qpDCFzioB3rXnhbtPKEzHB+4fTFT/Rjito32fFPUtee2Rw4SCe4YIlS0ksPOTmxkeoh2TQLIYcNPPoI7UpUX6uC65nzgCUTmZVoiCweQE+i5GhEBI=
+    #     on:
+    #       branch: master
+    #   before_install: if [[ ! -z $(echo $TRAVIS_COMMIT_MESSAGE | grep -E "\[nodeploy\]") ]]; then echo "Skipping deployment as indicated by commit message"; travis_terminate 0; fi
 
   allow_failures:
     # Allow remote-data tests to fail.
